Finished landing page
Finished styling and comments

--- a/landingPage.html
+++ b/landingPage.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-	<title>Perfect Match</title>
+	<title>Internet Cats</title>
 	<link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="app.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -28,8 +29,8 @@
         <li><a href="#">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Sign Up</a></li>
-        <li><a href="#">Login</a></li>
+        <li><a href="#">Sign Up <i class="fa fa-user-plus"></i></a></li>
+        <li><a href="#">Login <i class="fa fa-user"></i></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -42,7 +43,7 @@
 				<h1>Internet Cats</h1>
 				<h3>Your one and only source for cats of the internet</h3>
 				<hr>
-				<button class="btn btn-default btn-lg">Get Started!</button>
+				<button class="btn btn-default btn-lg"><i class="fa fa-paw"></i> Get Started!</button>
 			</div>
 		</div>
 	</div>
